--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
     app:startDestination="@id/setupFragment">
 
+    <action
+        android:id="@+id/action_global_trackingFragment"
+        app:destination="@id/trackingFragment"
+        app:launchSingleTop="true" />
+
     <fragment
         android:id="@+id/setupFragment"
         android:name="com.tut.myrunningplayground.view.SetupFragment"
@@ -35,4 +40,5 @@
         android:id="@+id/settingsFragment"
         android:name="com.tut.myrunningplayground.view.SettingsFragment"
         android:label="SettingsFragment" />
+
 </navigation>
